Reduced padding for `note`, `stop` styles
The `note` styles has quite a bit of padding on either side of the borders. Personally, I liked this, but it caused it to take up quite a bit of space. To help compress this so the notes aren't as invasive, I've reduced the padding while maintaining the margin.

Further, when having normalized the padding for the `note` (b992709), this had inadvertent impacts on the `stop` styling, which gave it far more padding than was expected. I maintained _some_ extra padding from that original state, but reduced it down so it's consistent with other styles.

--- a/Shared/Styles/Base/_contentBoxes.scss
+++ b/Shared/Styles/Base/_contentBoxes.scss
@@ -220,7 +220,7 @@ blockquote.note {
   border-left                   : none;
   min-height                    : rem-calc(32);
   margin-inline-start           : rem-calc(0);
-  padding                       : rem-calc(32 44);
+  padding                       : rem-calc(0 44);
   p:last-child {
     margin-bottom               : rem-calc(0);
   }
@@ -241,6 +241,7 @@ blockquote.note {
 blockquote.note {
   border-top                    : 2px solid $palette-blue;
   border-bottom                 : 2px solid $palette-blue;
+  padding                       : rem-calc(16 44);
   &, p {
     color                       : $palette-grey-medium;
   }
